(fix) Optimize UX
1/ fix the bugs not showing me user signin
2/Show notification when user join
3/ Not showing the time correctly
4/ CSS for notification

--- a/client/style.css
+++ b/client/style.css
@@ -46,6 +46,15 @@ body {
   text-align: center;
 }
 
+.chat-room-wrapper .system-notification{
+    background-color: #FFA07A;
+    display: inline-block;
+    padding: 2px 8px;
+    border-radius: 5px;
+    color: #FFF;
+    margin-bottom: 10px;
+}
+
 .chat-room-wrapper .chat-room .panel-body{
   position: absolute;
   top: 38px;
